# GalgameReverse

./: .gitignore  .gitmodules  README.md
criware/: iwaihime_pc_decrypt.c  xtx_font.py
project/advhd/: advhd.mk
project/azsystem/: lamune.mk
project/criware/: iwaihime.mk
project/eldia/: make_libkanda_fontmap.bat
project/exhibit/: soraironoorgan.mk
project/ffa/: CMakePresets.json  CMakeSettings.json  CmakeLists.txt  amanomiko.mk  libfontmanager.cmake
project/hunex/: meikoi_hook.js
project/ig/: ig_redirect.mk
project/krkr/: krkrtool.mk  sdhime.mk
project/livemaker/: aikimi.mk
project/majiro/: majiro.mk  winterpolaris.mk
project/onscripter/: make_ons_decryptnt3.bat  nscript.mk
project/qt/: CMakeLists.txt  qttool.mk
project/qt/src/: qfile_dump.cpp
project/qt/src/compat/: commdef_v110.h
project/systemnnn/: systemnnn.mk
project/unity/: unity_assetbundle.py  unity_customfont.py  unity_globalmeta.py
project/yuris/: akaihana.mk  yuris.mk
prototype/: airpsv_text.py
script/: binary_text.c  binary_text.h  binary_text.py  libfont.py  libtext.py  texture.py
script/krkr/: build_krkrpatch.bat  krkr_patch.c  krkr_sjis2utf16.py
script/simple/: batch_sjis2gbk.bat  batch_utf82gbk.bat  listmagic.py  text_encoding_covert.py
script/windows/: hook_win_console.js  hook_win_fileapi.js  win_console.js  win_file.js  win_hook.c  win_hook.h  win_redirect.js
scripts/: binary_text.py  font_util.py  text.py
scripts/simple/: batch_extract_text.cmd  batch_sjis2utf8.bat
scripts/windows/: hook_util.c  hook_util.cpp  hook_util.h  injectdll.py
(+365 files in other folders)
